core-services/gateway-system/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: cilium
  annotations:
    gateway.networking.k8s.io/default-class: "true"
spec:
  controllerName: io.cilium/gateway-controller
